--- a/server/src/main/resources/application.yaml
+++ b/server/src/main/resources/application.yaml
@@ -1,31 +1,34 @@
 ktor:
-    application:
-        modules:
-            - com.mehrbod.ApplicationKt.module
-    deployment:
-        port: 8080
-postgres:
-  url: "jdbc:postgresql://localhost/default"
-  user: username
-  password:
-  kafka:
-    schema.registry.url:
-      - "SCHEMA_REGISTRY_URL"
-    common:
-      bootstrap.servers:
-        - "BOOTSTRAP_SERVERS"
-      # Additional attributes
-    admin:
+  environment: "dev"
+  application:
+    modules:
+        - com.mehrbod.ApplicationKt.module
+  deployment:
+    port: 8080
+database:
+  postgres:
+    devUrl: "jdbc:h2:mem:///test;DB_CLOSE_DELAY=-1;MODE=PostgreSQL"
+    url: "jdbc:postgresql://localhost/default"
+    user: "username"
+    password: "password"
+kafka:
+  schema.registry.url:
+    - "SCHEMA_REGISTRY_URL"
+  common:
+    bootstrap.servers:
+      - "BOOTSTRAP_SERVERS"
     # Additional attributes
-    consumer:
-      group.id: "my-group-id"
-      # Additional attributes
-    producer:
-      client.id: "my-client-id"
-      # Additional attributes
-    topics:
-      - name: my-topic
-        partitions: 1
-        configs:
-          message.timestamp.type: CreateTime
-          # Additional attributes
+  admin:
+  # Additional attributes
+  consumer:
+    group.id: "my-group-id"
+    # Additional attributes
+  producer:
+    client.id: "my-client-id"
+    # Additional attributes
+  topics:
+    - name: my-topic
+      partitions: 1
+      configs:
+        message.timestamp.type: CreateTime
+        # Additional attributes
