--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,10 +1,11 @@
 [versions]
 exposed = "1.0.0-rc-2"
-h2 = "2.2.224"
+h2 = "1.0.0.RELEASE"
 kotlin = "2.2.20"
 ktor = "3.3.1"
 logback = "1.4.14"
-postgres = "42.7.3"
+r2dbc-postgres = "1.0.7.RELEASE"
+r2dbc-pool = "1.0.2.RELEASE"
 kodein = "7.28.0"
 
 [libraries]
@@ -12,13 +13,13 @@ ktor-server-default-headers = { module = "io.ktor:ktor-server-default-headers", 
 ktor-server-core = { module = "io.ktor:ktor-server-core", version.ref = "ktor" }
 ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
 ktor-server-content-negotiation = { module = "io.ktor:ktor-server-content-negotiation", version.ref = "ktor" }
-postgresql = { module = "org.postgresql:postgresql", version.ref = "postgres" }
-h2 = { module = "com.h2database:h2", version.ref = "h2" }
+postgresql = { module = "org.postgresql:r2dbc-postgresql", version.ref = "r2dbc-postgres" }
+h2 = { module = "io.r2dbc:r2dbc-h2", version.ref = "h2" }
+pool = { module = "io.r2dbc:r2dbc-pool", version.ref = "r2dbc-pool" }
 ktor-server-kafka = { module = "io.github.flaxoos:ktor-server-kafka", version = "2.2.1" }
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
 exposed-core = { module = "org.jetbrains.exposed:exposed-core", version.ref = "exposed" }
-exposed-jdbc = { module = "org.jetbrains.exposed:exposed-jdbc", version.ref = "exposed" }
-exposed-dao = { module = "org.jetbrains.exposed:exposed-dao", version.ref = "exposed" }
+exposed-r2dbc = { module = "org.jetbrains.exposed:exposed-r2dbc", version.ref = "exposed" }
 opentelemetry-sdk-extension-autoconfigure = { module = "io.opentelemetry:opentelemetry-sdk-extension-autoconfigure", version = "1.52.0" }
 opentelemetry-semconv = { module = "io.opentelemetry.semconv:opentelemetry-semconv", version = "1.34.0" }
 opentelemetry-exporter-otlp = { module = "io.opentelemetry:opentelemetry-exporter-otlp", version = "1.52.0" }
