--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,7 @@ ktor-server-default-headers = { module = "io.ktor:ktor-server-default-headers", 
 ktor-server-core = { module = "io.ktor:ktor-server-core", version.ref = "ktor" }
 ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
 ktor-server-content-negotiation = { module = "io.ktor:ktor-server-content-negotiation", version.ref = "ktor" }
+ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
 postgresql = { module = "org.postgresql:r2dbc-postgresql", version.ref = "r2dbc-postgres" }
 h2 = { module = "io.r2dbc:r2dbc-h2", version.ref = "h2" }
 pool = { module = "io.r2dbc:r2dbc-pool", version.ref = "r2dbc-pool" }
