--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,6 +7,7 @@ logback = "1.4.14"
 r2dbc-postgres = "1.0.7.RELEASE"
 r2dbc-pool = "1.0.2.RELEASE"
 kodein = "7.28.0"
+mockk = "1.14.6"
 
 [libraries]
 ktor-server-default-headers = { module = "io.ktor:ktor-server-default-headers", version.ref = "ktor" }
@@ -39,6 +40,7 @@ ktor-server-config-yaml = { module = "io.ktor:ktor-server-config-yaml", version.
 ktor-server-test-host = { module = "io.ktor:ktor-server-test-host", version.ref = "ktor" }
 kotlin-test-junit = { module = "org.jetbrains.kotlin:kotlin-test-junit", version.ref = "kotlin" }
 kodein = { module = "org.kodein.di:kodein-di-framework-ktor-server-jvm", version.ref = "kodein"}
+mockk = { module = "io.mockk:mockk", version.ref = "mockk"}
 
 [plugins]
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
