--- a/server/src/main/resources/application.yaml
+++ b/server/src/main/resources/application.yaml
@@ -23,21 +23,21 @@ database:
     password: "password"
 kafka:
   schema.registry.url:
-    - "SCHEMA_REGISTRY_URL"
+    - "http://localhost:8081"
   common:
     bootstrap.servers:
-      - "BOOTSTRAP_SERVERS"
+      - "localhost:29092"
     # Additional attributes
   admin:
   # Additional attributes
   consumer:
-    group.id: "my-group-id"
+    group.id: "notification-group"
     # Additional attributes
   producer:
     client.id: "my-client-id"
     # Additional attributes
   topics:
-    - name: my-topic
+    - name: review-event
       partitions: 1
       configs:
         message.timestamp.type: CreateTime
