--- a/server/src/test/resources/application-test.yaml
+++ b/server/src/test/resources/application-test.yaml
@@ -2,7 +2,7 @@ ktor:
   environment: "DEV" # DEV, PROD
   application:
     modules:
-        - com.mehrbod.ApplicationKt.module
+        - com.mehrbod.util.ApplicationKt.module
   deployment:
     port: 8080
 database:
