--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,6 +8,7 @@ r2dbc-postgres = "1.0.7.RELEASE"
 r2dbc-pool = "1.0.2.RELEASE"
 kodein = "7.28.0"
 mockk = "1.14.6"
+lettuce = "7.0.0.RELEASE"
 
 [libraries]
 ktor-server-default-headers = { module = "io.ktor:ktor-server-default-headers", version.ref = "ktor" }
@@ -42,6 +43,7 @@ ktor-server-config-yaml = { module = "io.ktor:ktor-server-config-yaml", version.
 ktor-server-test-host = { module = "io.ktor:ktor-server-test-host", version.ref = "ktor" }
 kodein = { module = "org.kodein.di:kodein-di-framework-ktor-server-jvm", version.ref = "kodein"}
 mockk = { module = "io.mockk:mockk", version.ref = "mockk"}
+lettuce = { module = "io.lettuce:lettuce-core", version.ref = "lettuce"}
 
 [plugins]
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
